# krnchr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  formatter.rs  main.rs  reader.rs  types.rs  writer.rs
test_mixed/: data.json  script.sh  unicode.txt
