[package]
name = "krnchr"
version = "0.1.1"
edition = "2021"
authors = ["Griffin Strier"]
description = "Combine files into a single output. Supports JSON, text, XML, YAML, and CSV formats."
license-file = "LICENSE"
repository = "https://github.com/GriffinCanCode/krnchr"
readme = "README.md"
keywords = ["file", "aggregator", "combine", "merge", "lossless"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["test_mixed/", "crunched.*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.10"

[[bin]]
name = "krnch"
path = "src/main.rs"

